# SYMFLUENCE

./: .gitignore  CHANGELOG.md  CLA.md  CLA_SIGNATURES  CONTRIBUTING.md  CORPORATE_CLA.md  GOVERNANCE.md  LICENSING.md  README.md  package-lock.json  pixi.toml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  cla.yml  cross-platform.yml  install-validate-parallel.yml  install-validate.yml  publish-pypi.yml  release-binaries.yml
docs/: index.html
docs/source/: architecture.rst  conf.py  developer_guide.rst  examples.rst  installation.rst  troubleshooting.rst
docs/source/models/: model_hbv.rst
examples/: README.md
examples/01_point_vertical_flux_estimation/: 01a_point_scale_snotel.ipynb  01b_point_scale_fluxnet.ipynb
examples/02_watershed_modelling/: 02a_basin_lumped.ipynb  02b_basin_semi_distributed.ipynb  02c_basin_distributed.ipynb
examples/04_workshop_notebooks/: 04a_logan_river_workshop.ipynb  04b_provo_river_workshop.ipynb  04c_sagehen_creek_workshop.ipynb  04d_diguillin_river_chile.ipynb
examples/05_callmip/: README.md  config_callmip_DK-Sor.yaml
examples/paper_case_studies/configs/configs_nested/: README.md
examples/paper_case_studies/configs/configs_orig/: README.md
npm/: README.md  install.js  package.json  uninstall.js
npm/lib/: binary-wrapper.js
scripts/: bump_version.sh  check_broad_exceptions.py  check_version_sync.sh  create_release_tarball.sh  stage_release_artifacts.sh  symfluence-bootstrap  verify_binary_portability.sh
src/symfluence/: __init__.py  symfluence_version.py
src/symfluence/cli/: argument_parser.py  external_tools_build_commands.py  external_tools_config.py
src/symfluence/cli/commands/: binary_commands.py
src/symfluence/cli/services/: build_snippets.py  system_deps.py  system_diagnostics.py  tool_installer.py
src/symfluence/core/: _bootstrap.py  hdf5_safety.py  provenance.py  registry.py  system.py
src/symfluence/core/config/: constants.py
src/symfluence/coupling/: bmi_registry.py
src/symfluence/coupling/adapters/: jax_adapters.py
src/symfluence/data/: data_manager.py
src/symfluence/data/acquisition/: acquisition_service.py  cloud_downloader.py
src/symfluence/data/model_ready/: cf_conventions.py
src/symfluence/data/preprocessing/: __init__.py  em_earth_integrator.py  forcing_resampler.py  remapping_weights.py
src/symfluence/data/utils/: variable_utils.py
src/symfluence/data_assimilation/: da_manager.py
src/symfluence/data_assimilation/enkf/: ensemble_manager.py
src/symfluence/evaluation/: __init__.py  analysis_manager.py  benchmarking.py  likelihood.py  metrics.py  metrics_registry.py  sensitivity_analysis.py  structure_ensemble.py
src/symfluence/evaluation/evaluators/: __init__.py  base.py  et.py  snow.py  soil_moisture.py
src/symfluence/geospatial/: geometry_utils.py
src/symfluence/geospatial/discretization/: core.py
src/symfluence/models/: __init__.py  model_manager.py  spatial_modes.py
src/symfluence/models/adapters/: base_adapter.py
src/symfluence/models/base/: base_postprocessor.py  base_runner.py  standard_postprocessor.py
src/symfluence/models/clm/: domain_generator.py  forcing_processor.py  surface_generator.py
src/symfluence/models/clmparflow/: preprocessor.py  runner.py
src/symfluence/models/config/: model_config_schema.py
src/symfluence/models/crhm/: preprocessor.py
src/symfluence/models/execution/: spatial_orchestrator.py
src/symfluence/models/fuse/: build_instructions.py  forcing_processor.py  runner.py
src/symfluence/models/gr/: postprocessor.py  runner.py
src/symfluence/models/gsflow/: preprocessor.py
src/symfluence/models/ignacio/: preprocessor.py
src/symfluence/models/lstm/: preprocessor.py
src/symfluence/optimization/: optimization_manager.py
src/symfluence/project/: project_manager.py  workflow_orchestrator.py
src/symfluence/reporting/: reporting_manager.py
src/symfluence/resources/: system_deps.yml
tests/configs/: test_nwm3_retro_config.yaml
tests/fixtures/: data_fixtures.py
tests/integration/: test_coupling_equivalence.py  test_dcoupler_coupling_modes.py  test_model_ready_store.py
tests/integration/data/: test_cloud_acquisition.py  test_cloud_observation_acquisition.py
tests/integration/domain/: test_distributed.py  test_point_scale.py
tests/integration/models/: test_sacsma_integration.py
tests/integration/optimization/: test_gradient_comparison.py
tests/models/test_jfuse/: conftest.py  test_jfuse_integration.py
tests/unit/: conftest.py
tests/unit/cli/: test_binary_install_default_tools.py  test_external_tools_config.py
tests/unit/config/: test_factories.py  test_paper_configs.py  test_semi_distributed_alias.py
tests/unit/coupling/: test_conditional_fallback.py  test_process_adapters_wiring.py
tests/unit/data/: test_cfif_variable_handler.py  test_nex_gddp_pressure_synthesis.py  test_rdrs_processing.py  test_weight_applier_cfif_fallback.py
tests/unit/evaluation/: test_analysis_manager.py  test_decision_analysis_routing_guards.py  test_decision_analysis_skip.py  test_likelihood.py  test_multivariate_system.py  test_sa_optimizer_internal_cols.py  test_sa_viscous_nan_handling.py  test_sensitivity_loud_fail.py
tests/unit/geospatial/: test_discretization_dispatch.py
tests/unit/models/: test_rpy2_optional.py  test_summa_preprocessor.py  test_summa_structure_analyzer.py
tests/unit/optimization/: test_results_tracking_scalar_coercion.py
tests/unit/project/: test_setup_project_layout.py
tests/unit/reporting/: test_workflow_diagnostic_plotter.py
tests/unit/scripts/: test_check_broad_exceptions.py
tests/upstream/hbv/: test_distributed_hbv.py  test_regionalization.py
tests/upstream/sacsma/: conftest.py  test_model.py  test_parameters.py  test_sacsma.py  test_snow17.py
tests/upstream/snow17/: conftest.py  test_snow17.py
tests/upstream/xinanjiang/: conftest.py  test_losses.py  test_model.py  test_parameters.py
tools/npm/: .npm-token-setup.md  install.js  package.json  uninstall.js
tools/quality/: broad_exception_allowlist.txt
(+1758 files in other folders)
