[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]

[project]
name = "symfluence"
description = "SYnergistic Modelling Framework for Linking and Unifying Earth-system Nexii for Computational Exploration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "SYMFLUENCE Team", email = "dev@symfluence.org" }]
dynamic = ["version"]

# Runtime dependencies with version constraints for stability
dependencies = [
  # Core scientific stack - constrained to major versions
  # NumPy 2.0+ required for ABI compatibility with compiled extensions
  "numpy>=2.0.0,<3.0.0",
  "pandas>=2.0.0,<3.0.0",
  "scipy>=1.10.0,<2.0.0",
  "xarray>=2023.0.0,<2026.0.0",
  "pint_xarray",
  "distributed",
  "pyviscous",
  # Machine learning - PyTorch major version constrained
  "torch>=2.0.0,<3.0.0",
  "scikit-learn>=1.2.0,<2.0.0",
  # Geospatial - GDAL is optional; system installs (brew, apt, conda) are auto-detected
  "geopandas>=0.13.0,<2.0.0",
  "rasterio>=1.3.0,<2.0.0",
  "pyproj>=3.5.0,<4.0.0",
  "shapely>=2.0.0,<3.0.0",
  "fiona>=1.9.0,<2.0.0",
  "easymore",
  "rasterstats",
  "exactextract>=0.3.0",
  "pvlib",
  "cdo>=1.6.0,<3.0.0",
  # Visualization
  "seaborn>=0.12.0,<1.0.0",
  "plotly>=5.0.0,<6.0.0",
  "matplotlib>=3.7.0,<4.0.0",
  "contextily",
  # Cloud and data access
  "gcsfs>=2023.0.0",
  "intake-xarray",
  "netCDF4>=1.6.0,<2.0.0",
  "h5netcdf>=1.1.0,<2.0.0",
  "cdsapi>=0.6.0,<1.0.0",
  "s3fs>=2023.0.0",
  "cftime>=1.6.0,<2.0.0",
  # Hydrology specific
  "hydrobm",
  # Note: baseflow is optional due to Python version constraints (see [project.optional-dependencies])
  # Utilities
  "SALib>=1.4.0,<2.0.0",
  "psutil>=5.9.0,<6.0.0",
  "tqdm>=4.64.0,<5.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "requests>=2.28.0,<3.0.0",
  "numexpr>=2.8.0,<3.0.0",
  "bottleneck>=1.3.0,<2.0.0",
  "networkx>=3.0.0,<4.0.0",
  # AI/LLM integration
  "openai>=1.0.0,<2.0.0",
  # CLI
  "rich>=13.0.0,<14.0.0",
  # Configuration models
  "pydantic>=2.0.0,<3.0.0",
  # Differentiable coupling framework
  "dcoupler>=0.2.0",
  # JAX-based model plugins
  "jsnow17>=0.1.0",
  "jsacsma>=0.1.0",
  "jxaj>=0.1.0",
  "jhbv>=0.1.0",
  "jhechms>=0.1.0",
  "jtopmodel>=0.1.0",
]

[project.optional-dependencies]
# GDAL Python bindings - optional, system GDAL installs are auto-detected.
# Only needed for DEM slope/aspect generation and GeoTIFF metadata reading.
# Install via: uv pip install "symfluence[gdal]", or rely on system install
# (brew install gdal, apt install python3-gdal, conda install gdal).
gdal = [
  "gdal>=3.6.0,<4.0.0",
]
# MESH model support - requires packages not on PyPI (hydrant on PyPI is an
# unrelated Kinesis Firehose tool; the correct one is kasra-keshavarz/hydrant).
# hydrant MUST be installed before meshflow to prevent pip resolving to the wrong package.
# Install manually:
#   uv pip install git+https://github.com/kasra-keshavarz/hydrant.git
#   uv pip install git+https://github.com/CH-Earth/meshflow.git@main
# Baseflow separation (requires Python <3.10 due to numba constraints)
baseflow = [
  "baseflow",
]
# R integration (requires R and libgcc to be installed)
r = [
  "rpy2>=3.5.0,<4.0.0",
]
# Development tools
dev = [
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]
# Testing dependencies
test = [
  "pytest>=7.0.0,<10.0.0",
  "pytest-xdist>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.0.0",
  "hypothesis>=6.0.0,<7.0.0",
]
# Documentation tools
docs = [
  "sphinx>=7.0.0",
  "pydata-sphinx-theme>=0.15.0",
  "sphinx-design>=0.5.0",
  "myst-parser>=2.0.0",
]
# Interactive development
notebook = [
  "jupyterlab>=4.0.0,<5.0.0",
  "ipykernel>=6.20.0,<7.0.0",
]
# Panel-based web GUI
gui = [
  "panel>=1.3.0,<2.0.0",
  "bokeh>=3.3.0,<4.0.0",
]
# Textual-based terminal UI
tui = [
  "textual>=0.47.0,<1.0.0",
]
# ALOS DEM via Microsoft Planetary Computer
alos = [
  "planetary-computer>=1.0.0",
  "pystac-client>=0.7.0",
]
# HPC / distributed parallelism (mpi4py must be built against the site MPI;
# on many HPC systems `module load py-mpi4py` is preferred over pip install)
hpc = [
  "mpi4py>=3.0.0,<4.0.0",
]
# All development dependencies
all = [
  "symfluence[r,dev,test,docs,notebook,gui,tui,alos]",
]

[project.scripts]
# thin wrapper that delegates to your existing CLI
symfluence = "symfluence.main_cli:main"

# ---------------------------------------------------------------------------
# Plugin entry points
# ---------------------------------------------------------------------------
# External packages register symfluence plugins here.  Each entry point
# should reference a zero-arg callable that performs registrations using
# R.*.add(), model_manifest(), or any other registry API.
#
# The six bundled JAX model packages (jhbv, jhechms, jtopmodel, jsnow17,
# jsacsma, jxaj) each declare their own entry points in their respective
# pyproject.toml files — they are discovered automatically at runtime
# via importlib.metadata and do not need to be repeated here.
#
# To add a new external model plugin, declare in your package's pyproject.toml:
#
#   [project.entry-points."symfluence.plugins"]
#   my_model = "my_package:register"

[project.urls]
Homepage = "https://symfluence.org"
Source = "https://github.com/symfluence-org/SYMFLUENCE"
Issues = "https://github.com/symfluence-org/SYMFLUENCE/issues"
Documentation = "https://symfluence.org/"

[tool.hatch.build.targets.sdist]
include = [
  "src/symfluence",
  "README.md",
  "LICENSE",
  "MANIFEST.in",
  "requirements.txt",
  "examples/"
]

[tool.hatch.build.targets.wheel]
packages = ["src/symfluence"]

# NOTE: pytest configuration is in pytest.ini (authoritative source)
# This avoids duplication and ensures consistent test configuration

[tool.hatch.version]
path = "src/symfluence/symfluence_version.py"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length to match common conventions
line-length = 120

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "examples",  # Notebooks can be informal
]

[tool.ruff.lint]
# Select rules to enforce
select = [
    "F",      # Pyflakes (undefined names, unused imports, etc.)
    "W",      # pycodestyle warnings (trailing whitespace, etc.)
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear (common bug patterns)
    "PGH003", # Blanket type: ignore without error code
    "BLE001", # No blind except Exception
]

# Ignore rules that are intentional patterns
ignore = [
    # F401 (unused imports) remains enforced globally.
    # Exceptions are limited via per-file ignores below.
    "F403",  # Star imports - intentional for re-exports in __init__.py
    "F405",  # Name may be undefined from star import - related to F403
    "E701",  # Multiple statements on one line (colon) - common guard clause pattern
    "E402",  # Module level import not at top - intentional for optional deps/deprecation
    # Bugbear rules deferred — high count, low value for paper release
    "B905",  # zip-without-strict (stylistic)
    "B007",  # Unused loop variable (cosmetic)
    "B028",  # No explicit stacklevel in warnings (cosmetic)
    "B017",  # assert-raises-exception in tests (test-only)
    "B027",  # Empty method without abstract decorator (intentional base classes)
    "B024",  # Abstract base class without abstract method (intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["symfluence", "test_helpers"]

[tool.ruff.lint.per-file-ignores]
# Tests can have more relaxed rules for imports and unused variables
"tests/**/*.py" = ["F401", "F841"]
# Init files often have unused imports for re-export
"**/__init__.py" = ["F401", "F403"]

[tool.bandit]
exclude_dirs = ["tests", "examples", "venv", ".venv"]
skips = [
    "B101",  # Allow assert statements
    "B110",  # try_except_pass - used for optional error handling
    "B112",  # try_except_continue - used for optional error handling in loops
    "B311",  # random - not used for security/cryptographic purposes
    "B404",  # subprocess import - required for external model execution
    "B603",  # subprocess calls - required for external model execution
    "B607",  # partial paths - safe for known system commands
    "B608",  # SQL string construction - controlled API queries (gSSURGO SDA), not user input
]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
# Ignore the most common noisy errors for now
disable_error_code = ["attr-defined", "no-any-return", "operator", "arg-type", "assignment", "union-attr"]
exclude = ["examples/", "tests/", "src/symfluence/cli\\.py$"]

[tool.coverage.run]
source = ["src/symfluence"]
branch = true
relative_files = true
disable_warnings = ["couldnt-parse", "no-data-collected"]
omit = [
    "src/symfluence/gui/*",
    "src/symfluence/tui/*",
    "src/symfluence/*/build_instructions.py",
    "src/symfluence/fews/*",
]

[tool.coverage.report]
# Avoid failing release checks when local/stale coverage databases
# reference files that no longer exist after refactors/moves.
ignore_errors = true
# Actual coverage ~17% (unit tests only, with pytest-xdist parallel).
# Many modules require external model binaries, live APIs, or real
# forcing data that cannot run in CI.
fail_under = 15
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "pass",
    "@(abc\\.)?abstractmethod",
]
